--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=5000
 # node-postgres configuration
 PGUSER=aski
 PGHOST=localhost
-PGPASSWORD=wave125i
+PGPASSWORD=disembunyikan
 PGDATABASE=openmusic
 PGPORT=5432
 
